--- a/src/plugin/index.html
+++ b/src/plugin/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Date: 2020-10-01 08:36:36
  * @LastEditors: zhangbaoyan
- * @LastEditTime: 2020-10-01 09:18:27
+ * @LastEditTime: 2020-10-10 13:49:39
  * @FilePath: /study/webpack/myWebpack/src/plugin/index.html
 -->
 <!DOCTYPE html>
@@ -10,6 +10,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- <link rel="stylesheet" href="//at.alicdn.com/t/font_535257_yaf8utothv.css"> -->
 </head>
 <body>
     <div id="app">
